deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: kong-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworldapp
        image: helloworld:local
        ports:
        - containerPort: 8080
