service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: kong-ns
spec:
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
